syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.piao888.order.dubbo";
option java_outer_classname = "OrderServiceProto";
option java_generic_services = true;


message empty{

}

service OrderService {
  rpc  create(OrderDTO)  returns (OrderDTO) {}
}

message OrderDTO{
  string userId = 1;
  string commodityCode = 2;
  int32 orderCount = 3;
}

service AccountService {
  rpc debit(PayDTO) returns (empty){}
}
message PayDTO{
  string userId = 1;
  string money = 2;
}